# thorbot

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: analysis.yml  check.yml  docker-image.yml  release.yml  tests.yml
thor/: __main__.py  deeplinking.py  telegram.py  web.py
thor/database/: __init__.py  accounts.py  students.py  telegram.py
thor/telegram/: __main__.py  campaigncontainer.py  challenges.py  dialog.py
thor/web/: __main__.py
thor/web/static/: style.less
thorunimore/: deeplinking.py
thorunimore/database/: __init__.py  students.py  telegram.py  tokens.py
thorunimore/database/base/: __init__.py
thorunimore/telegram/: __main__.py  challenges.py  dialog.py
thorunimore/web/: __main__.py
thorunimore/web/static/: style.css  style.css.map  style.less
thorunimore/web/templates/: base.html  error.html  info.html  longer.html  privacy.html
