[tool.poetry]
name = "thorunimore"
version = "1.0.6"
description = "A moderator bot for the Unimore Informatica group"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
royalnet = "^6.0.0a1"
telethon = "^1.16.4"
cryptg = {version = "^0.2.post1", optional = true}
aiohttp = "^3.6.2"
flask = "^1.1.2"
authlib = "^0.14.3"
flask-sqlalchemy = "^2.4.4"
requests = "^2.24.0"
itsdangerous = "^1.1.0"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
